# matou

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  go.mod  justfile
cmd/matou/: cache.go  cache_test.go  config.go  kitty.go  layout.go  main.go  model.go  palette.go  palette_test.go  update.go  view.go
cmd/prowl/: cache.go  cache_test.go  config.go  git.go  hooks.go  kitty.go  layout.go  main.go  model.go  palette.go  palette_test.go  sources.go  update.go  update_test.go  view.go  view_test.go
examples/: agent-preview.sh  agent.sh  palette.layouts
src/: cache.rs  config.rs  git.rs  hooks.rs  kitty.rs  main.rs  mirror.rs  mirror_p2p.rs  mirror_wt.rs  model.rs  palette.rs  sources.rs  theme.rs  update.rs  view.rs
